src/samples/TelemetrySamples/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telemetrysampleweb
  labels:
    app: telemetrysampleweb
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app: telemetrysampleweb
  template:
    metadata:
      labels:
        app: telemetrysampleweb
    spec:
      containers:
      - name: telemetrysampleweb
        image: registry.localhost:5000/telemetrysampleweb:latest
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 0
          periodSeconds: 10
          timeoutSeconds: 1
          failureThreshold: 3
        # As soon as the startup probe succeeds once it never runs again for the lifetime of that container.
        # If the startup probe never succeeds, Kubernetes will eventually kill the container, and restart the pod.
        startupProbe:
          httpGet:
            path: /health/startup
            port: 80
          failureThreshold: 30
          periodSeconds: 10
        # Readiness probes indicate whether your application is ready to handle requests.
        readinessProbe:
          httpGet:
            path: /ready
            port: 80
          successThreshold: 3
