src/samples/TelemetrySamples/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
      app: telemetrysampleweb
  name: telemetrysampleweb
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
      app: telemetrysampleweb
  type: ClusterIP
